[package]
name = "polkadot_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  # For JSON parsing
serde_json = "1.0"  # Handle JSON data
tokio = { version = "1", features = ["full"] }  # Async runtime
url = "2.2"  # For URL parsing
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }  # WebSocket over tokio runtime
futures-util = "0.3"  # Utility for async streams
tokio-native-tls = "0.3"  # TLS support for tokio
