[package]
name = "polkadot_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } # Async runtime
subxt = "0.29" # For interacting with Substrate nodes
serde = { version = "1.0", features = ["derive"] } # Serialization and deserialization
serde_json = "1.0" # Handle JSON data
futures-util = "0.3" # For handling async streams
tokio-postgres = "0.7"
deadpool-postgres = "0.9"
dotenv = "0.15"